author:                 Keita Mizuochi
build-type:             Simple
cabal-version:          >= 1.10
category:               Web
description:            A personal web diary.
license-file:           LICENSE
license:                LGPL-3
maintainer:             mizon9@gmail.com
name:                   lupo
stability:              Experimental
synopsis:               A personal web diary.
version:                0.1

flag development
  description:          Whether to build the server in development (interpreted) mode
  default:              False

executable lupo
  build-depends:
    HDBC                        >= 2.3,
    HDBC-sqlite3                >= 2.3,
    MonadCatchIO-transformers   >= 0.2.1 && < 0.4,
    attoparsec                  >= 0.10,
    base                        >= 4 && < 5,
    bytestring                  >= 0.9.1 && < 0.11,
    containers                  >= 0.4,
    convertible                 >= 1.0,
    cryptohash                  >= 0.9,
    directory                   >= 1.1,
    enumerator                  >= 0.4 && < 0.5,
    errors                      >= 1.4,
    filepath                    >= 1.3,
    heist                       >= 0.11 && < 0.12,
    lens                        >= 3.7,
    mtl                         >= 2 && < 3,
    old-locale                  >= 1.0,
    random                      >= 1.0,
    shakespeare-text            >= 1.0,
    snap                        >= 0.11 && < 0.13,
    snap-core                   >= 0.9 && < 0.11,
    snap-loader-static          >= 0.9 && < 0.10,
    snap-server                 >= 0.9 && < 0.11,
    text                        >= 0.11,
    time                        >= 1.4,
    xmlhtml                     >= 0.2,
    yaml                        >= 0.8
  if flag(development)
    build-depends:
      snap-loader-dynamic       == 0.10.*
    cpp-options:                -DDEVELOPMENT
  default-extensions:
    CPP,
    DeriveDataTypeable,
    DisambiguateRecordFields,
    DoAndIfThenElse,
    ExistentialQuantification,
    FlexibleContexts,
    FlexibleInstances,
    LambdaCase,
    NoMonomorphismRestriction,
    OverloadedStrings,
    QuasiQuotes,
    RankNTypes,
    ScopedTypeVariables,
    TemplateHaskell,
    TemplateHaskell,
    TypeSynonymInstances,
    ViewPatterns
  default-language: Haskell2010
  ghc-options: -threaded -Wall -funbox-strict-fields
  hs-source-dirs: ., src
  main-is: Main.hs

test-suite test
  build-depends:
    QuickCheck                  >= 2.5,
    data-default                >= 0.5,
    hspec                       >= 1.2,

    HDBC                        >= 2.3,
    HDBC-sqlite3                >= 2.3,
    MonadCatchIO-transformers   >= 0.2.1 && < 0.4,
    attoparsec                  >= 0.10,
    base                        >= 4 && < 5,
    bytestring                  >= 0.9.1 && < 0.11,
    containers                  >= 0.4,
    convertible                 >= 1.0,
    cryptohash                  >= 0.9,
    directory                   >= 1.1,
    enumerator                  >= 0.4 && < 0.5,
    errors                      >= 1.4,
    filepath                    >= 1.3,
    heist                       >= 0.11 && < 0.12,
    lens                        >= 3.7,
    mtl                         >= 2 && < 3,
    old-locale                  >= 1.0,
    random                      >= 1.0,
    shakespeare-text            >= 1.0,
    snap                        >= 0.11 && < 0.13,
    snap-core                   >= 0.9 && < 0.11,
    snap-loader-static          >= 0.9 && < 0.10,
    snap-server                 >= 0.9 && < 0.11,
    text                        >= 0.11,
    time                        >= 1.4,
    xmlhtml                     >= 0.2,
    yaml                        >= 0.8
  default-extensions:
    CPP,
    DeriveDataTypeable,
    DisambiguateRecordFields,
    DoAndIfThenElse,
    ExistentialQuantification,
    FlexibleContexts,
    FlexibleInstances,
    LambdaCase,
    NoMonomorphismRestriction,
    OverloadedStrings,
    QuasiQuotes,
    RankNTypes,
    ScopedTypeVariables,
    TemplateHaskell,
    TemplateHaskell,
    TypeSynonymInstances,
    ViewPatterns
  default-language:     Haskell2010
  ghc-options:          -Wall
  hs-source-dirs:       src, spec
  main-is:              Main.hs
  type:                 exitcode-stdio-1.0
